--- a/mau-website-0-p72.html
+++ b/mau-website-0-p72.html
@@ -1839,7 +1839,7 @@
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website caysuadolongson.com.vn</strong>
+																	<strong>Thiết kế website ô dù áo mưa</strong>
 																</h2>
 															</a>
 														</div>
@@ -1861,60 +1861,60 @@
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://rslbadminton.com/'>
+															<a target="_blank" href='https://bizhostvn.com/w/dongphuc/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/291/300_1/jpg/thiet-ke-website-rslbadminton-com_300x300.jpg" alt="Thiết kế website rslbadminton.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/291/300_1/jpg/thiet-ke-website-rslbadminton-com_300x300.jpg" alt="Thiết kế website rslbadminton.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/291/300_1/jpg/dongphuc.jpg" alt="web dong phuc">
+																		<noscript><img src="../files/sanpham/291/300_1/jpg/dongphuc.jpg" alt="web dong phuc"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website rslbadminton.com</strong>
+																	<strong>Thiết kế website đồng phục</strong>
 																</h2>
 															</a>
 														</div>
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12094.dangnhanhonline.com/'>
+															<a target="_blank" href='https://bizhostvn.com/w/docu/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/290/300_1/jpg/thiet-ke-website-vuonkienngocsang-com_300x300.jpg" alt="Thiết kế website vuonkienngocsang.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/290/300_1/jpg/thiet-ke-website-vuonkienngocsang-com_300x300.jpg" alt="Thiết kế website vuonkienngocsang.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/290/300_1/jpg/noithat.jpg" alt="Thiết kế website noi that">
+																		<noscript><img src="../files/sanpham/290/300_1/jpg/noithat.jpg" alt="Thiết kế website noithat"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website vuonkienngocsang.com</strong>
+																	<strong>Thiết kế website noi that</strong>
 																</h2>
 															</a>
 														</div>
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12093.dangnhanhonline.com/'>
+															<a target="_blank" href='https://bizhostvn.com/w/dienmay3/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/289/300_1/jpg/thiet-ke-website-ngoisaoachau-com-vn_300x300.jpg" alt="Thiết kế website ngoisaoachau.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/289/300_1/jpg/thiet-ke-website-ngoisaoachau-com-vn_300x300.jpg" alt="Thiết kế website ngoisaoachau.com.vn"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/289/300_1/jpg/dienmay.jpg" alt="Thiết kế website dien may">
+																		<noscript><img src="../files/sanpham/289/300_1/jpg/dienmay.jpg" alt="Thiết kế website dien may"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website ngoisaoachau.com.vn</strong>
+																	<strong>Thiết kế website điện máy</strong>
 																</h2>
 															</a>
 														</div>
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://thienminhmobile.com/'>
+															<a target="_blank" href='https://bizhostvn.com/w/dienmay/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/288/300_1/jpg/thiet-ke-website-thienminhmobile-com_300x300.jpg" alt="Thiết kế website thienminhmobile.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/288/300_1/jpg/thiet-ke-website-thienminhmobile-com_300x300.jpg" alt="Thiết kế website thienminhmobile.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/288/300_1/jpg/dienthoai.jpg" alt="Thiết kế website ban dien thoai">
+																		<noscript><img src="../files/sanpham/288/300_1/jpg/dienthoai.jpg" alt="Thiết kế website ban dien thoai"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website thienminhmobile.com</strong>
+																	<strong>Thiết kế website bán điện thoại</strong>
 																</h2>
 															</a>
 														</div>
@@ -1924,8 +1924,8 @@
 															<a target="_blank" href='http://xenangsavico.com/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/287/300_1/jpg/thiet-ke-website-xenangsavico-com_300x300.jpg" alt="Thiết kế website xenangsavico.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/287/300_1/jpg/thiet-ke-website-xenangsavico-com_300x300.jpg" alt="Thiết kế website xenangsavico.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/287/300_1/jpg/thiet-ke-website-xenangsavico-com_300x300.jpg" alt="Thiết kế website xenangsavico.com">
+																		<noscript><img src="../files/sanpham/287/300_1/jpg/thiet-ke-website-xenangsavico-com_300x300.jpg" alt="Thiết kế website xenangsavico.com"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
@@ -1936,45 +1936,45 @@
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://dangcapdidong.com/'>
+															<a target="_blank" href='https://bizhostvn.com/w/xkld4/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/286/300_1/jpg/thiet-ke-website-dangcapdidong-com_300x300.jpg" alt="Thiết kế website dangcapdidong.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/286/300_1/jpg/thiet-ke-website-dangcapdidong-com_300x300.jpg" alt="Thiết kế website dangcapdidong.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/286/300_1/jpg/xkld.jpg" alt="Thiết kế website xkld">
+																		<noscript><img src="../files/sanpham/286/300_1/jpg/xkld.jpg" alt="Thiết kế website xkld"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website dangcapdidong.com</strong>
+																	<strong>Thiết kế website xk lao động</strong>
 																</h2>
 															</a>
 														</div>
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12088.dangnhanhonline.com/'>
+															<a target="_blank" href='https://bizhostvn.com/w/xkld3/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/285/300_1/jpg/thiet-ke-website-sevenflower-vn_300x300.jpg" alt="Thiết kế website sevenflower.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/285/300_1/jpg/thiet-ke-website-sevenflower-vn_300x300.jpg" alt="Thiết kế website sevenflower.vn"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/285/300_1/jpg/dieuduongnhat.jpg" alt="Thiết kế website lao dong dieu duong">
+																		<noscript><img src="../files/sanpham/285/300_1/jpg/dieuduongnhat.jpg" alt="Thiết kế website xkld điều dưỡng"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website sevenflower.vn</strong>
+																	<strong>Thiết kế website xkld2</strong>
 																</h2>
 															</a>
 														</div>
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://sudico.com.vn/'>
+															<a target="_blank" href='https://bizhostvn.com/w/xkld2/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/284/300_1/jpg/thiet-ke-website-sudico-com-vn_300x300.jpg" alt="Thiết kế website sudico.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/284/300_1/jpg/thiet-ke-website-sudico-com-vn_300x300.jpg" alt="Thiết kế website sudico.com.vn"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/284/300_1/jpg/xkldnhat.jpg" alt="Thiết kế website cong ty xkld">
+																		<noscript><img src="../files/sanpham/284/300_1/jpg/xkldnhat.jpg" alt="Thiết kế website cong ty xkld"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website sudico.com.vn</strong>
+																	<strong>Thiết kế website xkld nhật3</strong>
 																</h2>
 															</a>
 														</div>
@@ -1984,8 +1984,8 @@
 															<a target="_blank" href='http://ws12084.dangnhanhonline.com/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/283/300_1/jpg/thiet-ke-website-thietbiphongchup-com_300x300.jpg" alt="Thiết kế website thietbiphongchup.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/283/300_1/jpg/thiet-ke-website-thietbiphongchup-com_300x300.jpg" alt="Thiết kế website thietbiphongchup.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/283/300_1/jpg/thiet-ke-website-thietbiphongchup-com_300x300.jpg" alt="Thiết kế website thietbiphongchup.com">
+																		<noscript><img src="../files/sanpham/283/300_1/jpg/thiet-ke-website-thietbiphongchup-com_300x300.jpg" alt="Thiết kế website thietbiphongchup.com"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
@@ -1999,8 +1999,8 @@
 															<a target="_blank" href='http://ws12083.dangnhanhonline.com/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/282/300_1/jpg/thiet-ke-website-superman-coffee-com_300x300.jpg" alt="Thiết kế website superman-coffee.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/282/300_1/jpg/thiet-ke-website-superman-coffee-com_300x300.jpg" alt="Thiết kế website superman-coffee.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/282/300_1/jpg/thiet-ke-website-superman-coffee-com_300x300.jpg" alt="Thiết kế website superman-coffee.com">
+																		<noscript><img src="../sanpham/282/300_1/jpg/thiet-ke-website-superman-coffee-com_300x300.jpg" alt="Thiết kế website superman-coffee.com"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
@@ -2011,60 +2011,61 @@
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://nhatmyxophoi.com/'>
+															<a target="_blank" href='https://bizhostvn.com/w/vivaclinic/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/281/300_1/jpg/thiet-ke-website-nhatmyxophoi-com_300x300.jpg" alt="Thiết kế website nhatmyxophoi.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/281/300_1/jpg/thiet-ke-website-nhatmyxophoi-com_300x300.jpg" alt="Thiết kế website nhatmyxophoi.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/281/300_1/jpg/nhakhoa.jpg" alt="Thiết kế website nha khoa">
+																		<noscript><img src="../files/sanpham/281/300_1/jpg/nhakhoa.jpg" alt="Thiết kế website nhakhoa
+																			khoa"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website nhatmyxophoi.com</strong>
+																	<strong>Thiết kế website nha khoa</strong>
 																</h2>
 															</a>
 														</div>
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" >
+															<a target="_blank" href="https://bizhostvn.com/w/vientoc/">
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/280/300_1/jpg/thiet-ke-website-noithatsinhloi-com-vn_300x300.jpg" alt="Thiết kế website noithatsinhloi.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/280/300_1/jpg/thiet-ke-website-noithatsinhloi-com-vn_300x300.jpg" alt="Thiết kế website noithatsinhloi.com.vn"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/280/300_1/jpg/vientoc.jpg" alt="Thiết kế website học viện">
+																		<noscript><img src="../files/sanpham/280/300_1/jpg/vientoc.jpg" alt="Thiết kế website học viện"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website noithatsinhloi.com.vn</strong>
+																	<strong>Thiết kế website học viện tóc</strong>
 																</h2>
 															</a>
 														</div>
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" >
+															<a target="_blank" href="https://bizhostvn.com/w/vape/" >
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/279/300_1/jpg/thiet-ke-website-goixopsg-com_300x300.jpg" alt="Thiết kế website goixopsg.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/279/300_1/jpg/thiet-ke-website-goixopsg-com_300x300.jpg" alt="Thiết kế website goixopsg.com"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/279/300_1/jpg/vape.jpg" alt="Thiết kế website bán thuốc lá điện tử">
+																		<noscript><img src="../files/sanpham/279/300_1/jpg/vape.jpg" alt="Thiết kế website bán hàng"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website goixopsg.com</strong>
+																	<strong>Thiết kế website bán thuốc lá điện tử</strong>
 																</h2>
 															</a>
 														</div>
 													</div>
 																								<div class="mauweb">
 														<div class="mauweb_spacer">
-															<a target="_blank" href='http://alphacartridge.com.vn/'>
+															<a target="_blank" href='https://bizhostvn.com/w/tuongthachcao/'>
 																<h3 class="mauweb_anh">
 																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/278/300_1/jpg/thiet-ke-website-alphacartridge-com-vn_300x300.jpg" alt="Thiết kế website alphacartridge.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/278/300_1/jpg/thiet-ke-website-alphacartridge-com-vn_300x300.jpg" alt="Thiết kế website alphacartridge.com.vn"></noscript>
+																		<img class="lazyload" src="images/load.gif" data-src="files/sanpham/278/300_1/jpg/tuongthachcao.jpg" alt="Thiết kế website bán tượng thạch cao">
+																		<noscript><img src="../files/sanpham/278/300_1/jpg/tuongthachcao.jpg" alt="Thiết kế website bán tượng thạch cao"></noscript>
 																	</span>
 																</h3>
 																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website alphacartridge.com.vn</strong>
+																	<strong>Thiết kế website bán tượng thạch cao</strong>
 																</h2>
 															</a>
 														</div>
