--- a/mau-website-28-p20.html
+++ b/mau-website-28-p20.html
@@ -1464,7 +1464,7 @@
 																														<div class="SPPagination">
 													<span class="PG3">Tổng <strong>823</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="" href="mau-website-28.html">1</a><a class="" href="mau-website-28-p2.html">2</a><a class="" href="mau-website-28-p3.html">3</a><a class="" href="mau-website-28-p4.html">4</a><a class="" href="mau-website-28-p5.html">5</a><a class="" href="mau-website-28-p6.html">6</a><a class="" href="mau-website-28-p7.html">7</a><a class="" href="mau-website-28-p8.html">8</a><a class="" href="mau-website-28-p9.html">9</a><a class="" href="mau-website-28-p10.html">10</a><a class="" href="mau-website-28-p11.html">11</a><a class="" href="mau-website-28-p12.html">12</a><a class="" href="mau-website-28-p13.html">13</a><a class="" href="mau-website-28-p14.html">14</a><a class="" href="mau-website-28-p15.html">15</a><a class="" href="mau-website-28-p16.html">16</a><a class="" href="mau-website-28-p17.html">17</a><a class="" href="mau-website-28-p18.html">18</a><a class="" href="mau-website-28-p19.html">19</a><a class="intrang" href="mau-website-28-p20.html">20</a><a class="" href="mau-website-28-p21.html">21</a>													</span>
+														<a class="" href="mau-website-28.html">1</a><a class="" href="mau-website-28-p2.html">2</a><a class="" href="mau-website-28-p3.html">3</a><a class="" href="mau-website-28-p4.html">4</a><a class="" href="mau-website-28-p5.html">5</a><a class="" href="mau-website-28-p6.html">6</a><a class="" href="mau-website-28-p7.html">7</a><a class="" href="mau-website-28-p8.html">8</a><a class="" href="mau-website-28-p9.html">9</a><a class="" href="mau-website-28-p10.html">10</a><a class="" href="mau-website-28-p11.html">11</a><a class="" href="mau-website-28-p12.html">12</a><a class="" href="mau-website-28-p13.html">13</a><a class="" href="mau-website-28-p14.html">14</a><a class="" href="mau-website-28-p15.html">15</a><a class="" href="mau-website-28-p16.html">16</a><a class="" href="mau-website-28-p17.html">17</a><a class="" href="mau-website-28-p18.html">18</a><a class="" href="mau-website-28-p19.html">19</a><a class="intrang" href="mau-website-28-p20.html">20</a>													</span>
 													
 												</div>
 																				<div class="hopmauweb">
@@ -1919,160 +1919,13 @@
 														</div>
 													</div>
 																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://nhatmyxophoi.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/281/300_1/jpg/thiet-ke-website-nhatmyxophoi-com_300x300.jpg" alt="Thiết kế website nhatmyxophoi.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/281/300_1/jpg/thiet-ke-website-nhatmyxophoi-com_300x300.jpg" alt="Thiết kế website nhatmyxophoi.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website nhatmyxophoi.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://alphacartridge.com.vn/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/278/300_1/jpg/thiet-ke-website-alphacartridge-com-vn_300x300.jpg" alt="Thiết kế website alphacartridge.com.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/278/300_1/jpg/thiet-ke-website-alphacartridge-com-vn_300x300.jpg" alt="Thiết kế website alphacartridge.com.vn"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website alphacartridge.com.vn</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12069.mov.mn/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/276/300_1/jpg/thiet-ke-website-muabansaurieng-com_300x300.jpg" alt="Thiết kế website muabansaurieng.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/276/300_1/jpg/thiet-ke-website-muabansaurieng-com_300x300.jpg" alt="Thiết kế website muabansaurieng.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website muabansaurieng.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12067.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/274/300_1/jpg/thiet-ke-website-zipsmode-com_300x300.jpg" alt="Thiết kế website zipsmode.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/274/300_1/jpg/thiet-ke-website-zipsmode-com_300x300.jpg" alt="Thiết kế website zipsmode.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website zipsmode.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12064.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/272/300_1/jpg/thiet-ke-website-tisuushop-vn_300x300.jpg" alt="Thiết kế website tisuushop.vn">
-																		<noscript><img src="../websitere.vn/files/sanpham/272/300_1/jpg/thiet-ke-website-tisuushop-vn_300x300.jpg" alt="Thiết kế website tisuushop.vn"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website tisuushop.vn</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12044.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/255/300_1/jpg/thiet-ke-website-shopbenben-com_300x300.jpg" alt="Thiết kế website shopbenben.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/255/300_1/jpg/thiet-ke-website-shopbenben-com_300x300.jpg" alt="Thiết kế website shopbenben.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website shopbenben.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://muaresg.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/254/300_1/jpg/thiet-ke-website-muaresg-com_300x300.jpg" alt="Thiết kế website muaresg.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/254/300_1/jpg/thiet-ke-website-muaresg-com_300x300.jpg" alt="Thiết kế website muaresg.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website muaresg.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/251/300_1/jpg/thiet-ke-website-linhboutique-net_300x300.jpg" alt="Thiết kế website linhboutique.net">
-																		<noscript><img src="../websitere.vn/files/sanpham/251/300_1/jpg/thiet-ke-website-linhboutique-net_300x300.jpg" alt="Thiết kế website linhboutique.net"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website linhboutique.net</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12038.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/249/300_1/jpg/thiet-ke-website-trungtamdienmayphuonglinh-com_300x300.jpg" alt="Thiết kế website trungtâmdienmayphuonglinh.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/249/300_1/jpg/thiet-ke-website-trungtamdienmayphuonglinh-com_300x300.jpg" alt="Thiết kế website trungtâmdienmayphuonglinh.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website trungtâmdienmayphuonglinh.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://shopbunnylove.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/248/300_1/jpg/thiet-ke-website-shopbunnylove-com_300x300.jpg" alt="Thiết kế website shopbunnylove.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/248/300_1/jpg/thiet-ke-website-shopbunnylove-com_300x300.jpg" alt="Thiết kế website shopbunnylove.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website shopbunnylove.com</strong>
-																</h2>
-															</a>
-														</div>
+														
 													</div>
 																						</div>
 																					<div class="SPPagination">
 													<span class="PG3">Tổng <strong>823</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="" href="mau-website-28.html">1</a><a class="" href="mau-website-28-p2.html">2</a><a class="" href="mau-website-28-p3.html">3</a><a class="" href="mau-website-28-p4.html">4</a><a class="" href="mau-website-28-p5.html">5</a><a class="" href="mau-website-28-p6.html">6</a><a class="" href="mau-website-28-p7.html">7</a><a class="" href="mau-website-28-p8.html">8</a><a class="" href="mau-website-28-p9.html">9</a><a class="" href="mau-website-28-p10.html">10</a><a class="" href="mau-website-28-p11.html">11</a><a class="" href="mau-website-28-p12.html">12</a><a class="" href="mau-website-28-p13.html">13</a><a class="" href="mau-website-28-p14.html">14</a><a class="" href="mau-website-28-p15.html">15</a><a class="" href="mau-website-28-p16.html">16</a><a class="" href="mau-website-28-p17.html">17</a><a class="" href="mau-website-28-p18.html">18</a><a class="" href="mau-website-28-p19.html">19</a><a class="intrang" href="mau-website-28-p20.html">20</a><a class="" href="mau-website-28-p21.html">21</a>													</span>
+														<a class="" href="mau-website-28.html">1</a><a class="" href="mau-website-28-p2.html">2</a><a class="" href="mau-website-28-p3.html">3</a><a class="" href="mau-website-28-p4.html">4</a><a class="" href="mau-website-28-p5.html">5</a><a class="" href="mau-website-28-p6.html">6</a><a class="" href="mau-website-28-p7.html">7</a><a class="" href="mau-website-28-p8.html">8</a><a class="" href="mau-website-28-p9.html">9</a><a class="" href="mau-website-28-p10.html">10</a><a class="" href="mau-website-28-p11.html">11</a><a class="" href="mau-website-28-p12.html">12</a><a class="" href="mau-website-28-p13.html">13</a><a class="" href="mau-website-28-p14.html">14</a><a class="" href="mau-website-28-p15.html">15</a><a class="" href="mau-website-28-p16.html">16</a><a class="" href="mau-website-28-p17.html">17</a><a class="" href="mau-website-28-p18.html">18</a><a class="" href="mau-website-28-p19.html">19</a><a class="intrang" href="mau-website-28-p20.html">20</a>													</span>
 												</div>
 																	</div>
 							</div>
