--- a/mau-website-25.html
+++ b/mau-website-25.html
@@ -1464,7 +1464,7 @@
 																														<div class="SPPagination">
 													<span class="PG3">Tổng <strong>77</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="intrang" href="mau-website-25.html">1</a><a class="" href="mau-website-25-p2.html">2</a>													</span>
+														<a class="intrang" href="mau-website-25.html">1</a>													</span>
 													
 												</div>
 																				<div class="hopmauweb">
@@ -2072,7 +2072,7 @@
 																					<div class="SPPagination">
 													<span class="PG3">Tổng <strong>77</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="intrang" href="mau-website-25.html">1</a><a class="" href="mau-website-25-p2.html">2</a>													</span>
+														<a class="intrang" href="mau-website-25.html">1</a>													</span>
 												</div>
 																	</div>
 							</div>
