--- a/mau-website-30.html
+++ b/mau-website-30.html
@@ -1465,7 +1465,7 @@
 																														<div class="SPPagination">
 													<span class="PG3">Tổng <strong>43</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="intrang" href="mau-website-30.html">1</a><a class="" href="mau-website-30-p2.html">2</a>													</span>
+														<a class="intrang" href="mau-website-30.html">1</a>													</span>
 													
 												</div>
 																				<div class="hopmauweb">
@@ -2010,70 +2010,13 @@
 														</div>
 													</div>
 																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12070.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/277/300_1/jpg/thiet-ke-website-vattumaylanh-net_300x300.jpg" alt="Thiết kế website vattumaylanh.net">
-																		<noscript><img src="../websitere.vn/files/sanpham/277/300_1/jpg/thiet-ke-website-vattumaylanh-net_300x300.jpg" alt="Thiết kế website vattumaylanh.net"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website vattumaylanh.net</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" href='http://ws12038.dangnhanhonline.com/'>
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/249/300_1/jpg/thiet-ke-website-trungtamdienmayphuonglinh-com_300x300.jpg" alt="Thiết kế website trungtâmdienmayphuonglinh.com">
-																		<noscript><img src="../websitere.vn/files/sanpham/249/300_1/jpg/thiet-ke-website-trungtamdienmayphuonglinh-com_300x300.jpg" alt="Thiết kế website trungtâmdienmayphuonglinh.com"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Thiết kế website trungtâmdienmayphuonglinh.com</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/76/300_1/jpg/mau-thiet-ke-web-0156_300x300.jpg" alt="Mẫu Thiết Kế Web 0156">
-																		<noscript><img src="../websitere.vn/files/sanpham/76/300_1/jpg/mau-thiet-ke-web-0156_300x300.jpg" alt="Mẫu Thiết Kế Web 0156"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0156</strong>
-																</h2>
-															</a>
-														</div>
-													</div>
-																								<div class="mauweb">
-														<div class="mauweb_spacer">
-															<a target="_blank" >
-																<h3 class="mauweb_anh">
-																	<span>
-																		<img class="lazyload" src="images/load.gif" data-src="https://websitere.vn/files/sanpham/75/300_1/jpg/mau-thiet-ke-web-0157_300x300.jpg" alt="Mẫu Thiết Kế Web 0157">
-																		<noscript><img src="../websitere.vn/files/sanpham/75/300_1/jpg/mau-thiet-ke-web-0157_300x300.jpg" alt="Mẫu Thiết Kế Web 0157"></noscript>
-																	</span>
-																</h3>
-																<h2 class="mauweb_ten">
-																	<strong>Mẫu Thiết Kế Web 0157</strong>
-																</h2>
-															</a>
-														</div>
+														
 													</div>
 																						</div>
 																					<div class="SPPagination">
 													<span class="PG3">Tổng <strong>43</strong> mẫu website</span>
 													<span class="PG2">
-														<a class="intrang" href="mau-website-30.html">1</a><a class="" href="mau-website-30-p2.html">2</a>													</span>
+														<a class="intrang" href="mau-website-30.html">1</a>													</span>
 												</div>
 																	</div>
 							</div>
